--- a/apps/examples/package.json
+++ b/apps/examples/package.json
@@ -35,8 +35,8 @@
 	"dependencies": {
 		"@babel/plugin-proposal-decorators": "^7.21.0",
 		"@playwright/test": "^1.38.1",
-		"@tldraw/assets": "workspace:*",
-		"@tldraw/tldraw": "workspace:*",
+		"@digitalsamba/assets": "workspace:*",
+		"@digitalsamba/tldraw": "workspace:*",
 		"@vercel/analytics": "^1.0.1",
 		"lazyrepo": "0.0.0-alpha.27",
 		"react": "^18.2.0",
