--- a/.github/workflows/publish-canary.yml
+++ b/.github/workflows/publish-canary.yml
@@ -25,8 +25,15 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          registry-url: 'https://registry.npmjs.org'
           cache: 'yarn'
           cache-dependency-path: 'public-yarn.lock'
+
+      - name: Show npm version
+        run: npm --version
+
+      - name: Update npm (required for trusted publishing)
+        run: npm install -g npm@latest
 
       - name: Enable corepack
         run: corepack enable
