--- a/.github/workflows/publish-canary.yml
+++ b/.github/workflows/publish-canary.yml
@@ -22,25 +22,14 @@ jobs:
           fetch-depth: 0
 
       - name: Setup Node.js environment
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: 20
-          registry-url: 'https://registry.npmjs.org'
+          node-version: 18
           cache: 'yarn'
           cache-dependency-path: 'public-yarn.lock'
 
-      - name: Show npm version
-        run: npm --version
-
-      # Optional: Remove if not needed for Yarn flow
-      - name: Update npm (required for trusted publishing)
-        run: npm install -g npm@latest
-
       - name: Enable corepack
         run: corepack enable
-
-      - name: Set Yarn to stable version
-        run: yarn set version stable
 
       - name: Install dependencies
         run: yarn
@@ -49,3 +38,4 @@ jobs:
         run: yarn tsx ./scripts/publish-canary.ts
         env:
           GH_TOKEN: ${{ github.token }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
